<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/editar_usuario"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- Separador -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="25dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <!-- TEXTO SELEC. TU MASCOTA -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/poppins"
                android:hint="@string/escribe_el_nombre_del_usuario"
                android:paddingStart="16dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/apellidos"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/poppins"
                android:hint="@string/escribe_los_apellidos_del_usuario"
                android:paddingStart="16dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/correo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/poppins"
                android:hint="@string/escribe_el_correo_del_usuario"
                android:paddingStart="16dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/contrasena"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/poppins"
                android:hint="@string/escribe_la_contrasenia_del_usuario"
                android:paddingStart="16dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/numero_telefono"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/poppins"
                android:hint="@string/escribe_el_telefono_del_usuario"
                android:paddingStart="16dp"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/usuario_vetado"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkBoxVetado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <!-- ZONA DE GESTIÓN DE VETO -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="25dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/mensaje_a_enviar"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="25dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/asunto"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etAsuntoMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/escribe_el_asunto_del_mensaje"
                    android:paddingStart="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/tipo_de_mensaje"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/combobox_cambioUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/custom_spinner_background"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="10dp"
                    android:popupBackground="@color/white"
                    android:spinnerMode="dialog"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/otros_datos"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etContenidoMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/escribe_el_contenido_del_mensaje"
                    android:padding="20dp" />

            </LinearLayout>

            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/layoutVeto">

                <!-- ZONA DE GESTIÓN DE VETO -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="25dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/gestion_de_veto"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="25dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/asunto"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etAsuntoMensajeVeto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/escribe_el_asunto_del_mensaje"
                    android:paddingStart="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/tipo_de_mensaje"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/combobox_seleccionTipoRazonVeto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/custom_spinner_background"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="10dp"
                    android:popupBackground="@color/white"
                    android:spinnerMode="dialog"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/otros_datos"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etContenidoMensajeVeto"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/escribe_el_contenido_del_mensaje"
                    android:padding="20dp" />

            </LinearLayout>

            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->
            <!-- ||||||||||||||||||||||||||||||||||||||||||||||||||||| -->


            <TextView
                android:id="@+id/btnUserCita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_azul_cielo"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/editar_usuario"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:gravity="center"/>



        </LinearLayout>

    </LinearLayout>

</ScrollView>