<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogris_app"
    android:orientation="vertical"
    tools:context=".MenuPrincipal_Activity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:src="@drawable/logovet"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_background"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvBienvenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/gestion_de_usuarios"
            android:gravity="center"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/btnFiltrarPor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/pulsa_para_filtrar_por"
                android:onClick="mostrarMenuFiltrar"
                android:background="@drawable/btn_azul_cielo"/>

        </LinearLayout>

        <EditText
            android:id="@+id/etBuscarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buscar_usuario"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btnBuscarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginBottom="5dp"
            android:text="@string/buscar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:background="@drawable/btn_azul_cielo"/>

        <View
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/listViewUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="5dp" />

    </LinearLayout>
</LinearLayout>
